# stripgpt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  publish.yml
src/: README.md  pyproject.toml
src/stripgpt/: __init__.py  __main__.py  core.py
tests/: test_clean_text.py
