[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stripgpt"
version = "0.1.0"
description = "CLI tool to strip ChatGPT-specific markers from text"
authors = [ { name = "Trygve Falch" } ]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
keywords = ["chatgpt","clean","cli","unicode","whitespace"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License"
]

[project.urls]
Homepage = "https://example.com/stripgpt"

[project.scripts]
stripgpt = "stripgpt.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "tox>=4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stripgpt"]
