[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stripgpt"
version = "0.1.0"
description = "CLI tool to strip ChatGPT-specific markers from text"
authors = [
    { name = "Trygve Falch" }
]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
stripgpt = "stripgpt.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "tox>=4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
